Add new query parameter to get details
